--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+
+input {
+  min-width: 300px;
+  max-width: 100%;
+  font-size: 20px;
+  color: white;
+  background: transparent;
+  border-bottom: solid 1px;
+  margin-right: 20px;
+  padding: 5px;
+
+}
+
+input::placeholder {
+  color: white;
+  opacity: 0.7; /* Firefox */
+}
