--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ input {
   color: white;
   background: transparent;
   border-bottom: solid 1px;
-  margin-right: 20px;
+  
   padding: 5px;
 
 }
@@ -52,4 +52,9 @@ input {
 input::placeholder {
   color: white;
   opacity: 0.7; /* Firefox */
+}
+
+.SearchBar input {
+  margin-right: 20px;
+  margin-left: 20px;
 }
