--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ input::placeholder {
   opacity: 0.7; /* Firefox */
 }
 
-.SearchBar input {
+.SearchBar button {
   margin-right: 20px;
   margin-left: 20px;
 }
